<resources>
    <string name="app_name">惠民庄园</string>

    <string name="empty_view_hint">暂无数据</string>
    <string name="error_view_hint">数据异常！</string>
    <string name="no_network_view_hint">网络异常！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="account">登录</string>
    <string name="input_phone_number"><font size="12">请输入手机号</font></string>
    <string name="input_password"><font size="12">请输入登录密码</font></string>
    <string name="binding_phone"><font size="12">请输入手机号码</font></string>
    <string name="binding_yzm"><font size="12">请输入验证码</font></string>
    <string name="binding_password"><font size="12">请设置登录密码</font></string>
    <string name="password_qr"><font size="12">请确认登录密码</font></string>
    <string name="remember_pwd">记住密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="password_need_six_digit">密码至少6位</string>
    <string name="input_correct_phone_num">请输入正确的手机号码</string>
    <string name="pwd">密码</string>
    <string name="action_login">登录</string>
    <string name="login">登录</string>
    <string name="empty_k">这个页面还是空空的呢..</string>
    <string name="empty_z">暂无匹配内容</string>
    <string name="affirm">确认</string>
    <string name="signin_dx">验证码已发送</string>
    <string name="tv_dx">获取验证码</string>
    <string name="dialog_msg_delete_order">该操作无法恢复\n确定要删除该订单吗？</string>
    <string name="dialog_msg_cancle_order">您确定取消订单吗？</string>
    <string name="to_expand_hint">\n更多</string>
    <string name="to_shrink_hint">收起</string>
</resources>
