<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/white">
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginTop="35dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@mipmap/login_logo"
                android:layout_width="110dp"
                android:layout_height="110dp" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/login_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:src="@mipmap/login_phone"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:textSize="15sp"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="54dp">

                        <EditText
                            android:id="@+id/login_user"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:drawablePadding="12dp"
                            android:paddingLeft="12dp"
                            android:imeOptions="actionNext"
                            android:maxLines="1"
                            android:textCursorDrawable="@drawable/login_edittext_gb"
                            android:maxLength="11"
                            android:inputType="phone"
                            android:nextFocusForward="@+id/login_password"
                            android:hint="@string/input_phone_number"
                            android:textColorHint="@color/grey_999999"
                            android:textSize="14sp"
                            android:textColor="@color/comman_title"
                            android:background="@color/white"/>


                    </RelativeLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_f0f0f5"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:src="@mipmap/login_lock"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:textSize="15sp"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="54dp">
                        <EditText
                            android:id="@+id/login_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:drawablePadding="12dp"
                            android:paddingLeft="12dp"
                            android:imeActionId="@+id/login"
                            android:imeOptions="actionDone"
                            android:maxLines="1"
                            android:maxLength="20"
                            android:textCursorDrawable="@drawable/login_edittext_gb"
                            android:inputType="textPassword"
                            android:imeActionLabel="@string/action_login"
                            android:nextFocusForward="@+id/login_password"
                            android:hint="@string/input_password"
                            android:textColorHint="@color/grey_999999"
                            android:textSize="14sp"
                            android:textColor="@color/comman_title"
                            android:background="@color/white"
                            tools:ignore="InvalidImeActionId" />

                        <CheckBox
                            android:id="@+id/login_pwd_mw"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:button="@null"
                            android:checked="false"
                            android:background="@drawable/pwd_select_mw_l"/>
                    </RelativeLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_f0f0f5"/>

            </LinearLayout>
            <CheckBox
                android:checked="true"
                android:id="@+id/login_remember_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:button="@drawable/pwd_select"
                android:textColor="@color/grey_969899"
                android:textSize="12sp"
                android:text="@string/remember_pwd"/>
            <TextView
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:id="@+id/login_in"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/shape_login"
                android:elevation="1dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/login"/>
            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/login_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/forget_password"
                android:textColor="@color/grey_969899"
                android:textSize="12sp" />
            <!--微信登录-->
            <LinearLayout
                android:layout_marginTop="80dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:layout_marginBottom="40dp"
                android:gravity="bottom|center_horizontal">
                <ImageView
                    android:id="@+id/weixin_login_img"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_login_wechat" />
                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="微信登录 安全快捷"
                    android:textColor="#2A2F33"
                    android:textSize="13sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>