<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/background">
    <include layout="@layout/comman_title"/>

    <LinearLayout
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/around_conner_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/login_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:src="@drawable/signin_phone"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="54dp">

                    <EditText
                        android:id="@+id/et_user"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:drawablePadding="12dp"
                        android:paddingLeft="12dp"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:textCursorDrawable="@drawable/login_edittext_gb"
                        android:maxLength="11"
                        android:inputType="phone"
                        android:nextFocusForward="@+id/login_password"
                        android:textColorHint="@color/grey_999999"
                        android:textSize="14sp"
                        android:hint="@string/binding_phone"
                        android:textColor="@color/comman_title"
                        android:background="@color/white"/>


                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_f0f0f5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:src="@drawable/signin_messag"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="54dp">
                    <EditText
                        android:id="@+id/et_yzm"
                        android:layout_width="wrap_content"
                        android:minWidth="150dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:drawablePadding="12dp"
                        android:paddingLeft="12dp"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:maxLength="4"
                        android:textCursorDrawable="@drawable/login_edittext_gb"
                        android:inputType="number"
                        android:imeActionLabel="@string/action_login"
                        android:nextFocusForward="@+id/login_password"
                        android:hint="@string/binding_yzm"
                        android:textColorHint="@color/grey_999999"
                        android:textSize="14sp"
                        android:textColor="@color/comman_title"
                        android:background="@color/white"
                        tools:ignore="InvalidImeActionId" />
                    <TextView
                        android:id="@+id/tv_dx"
                        android:text="@string/tv_dx"
                        android:padding="6dp"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/details_gm"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp" />
                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_f0f0f5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:src="@drawable/signin_lock"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="54dp">
                    <EditText
                        android:layout_marginRight="30dp"
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:drawablePadding="12dp"
                        android:paddingLeft="12dp"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:maxLength="20"
                        android:textCursorDrawable="@drawable/login_edittext_gb"
                        android:inputType="textPassword"
                        android:imeActionLabel="@string/action_login"
                        android:nextFocusForward="@+id/login_password"
                        android:hint="@string/binding_password"
                        android:textColorHint="@color/grey_999999"
                        android:textSize="14sp"
                        android:textColor="@color/comman_title"
                        android:background="@color/white"
                        tools:ignore="InvalidImeActionId" />
                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_f0f0f5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:src="@drawable/signin_lock"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="54dp">
                    <EditText
                        android:layout_marginRight="30dp"
                        android:id="@+id/et_password_qr"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:drawablePadding="12dp"
                        android:paddingLeft="12dp"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:maxLength="20"
                        android:textCursorDrawable="@drawable/login_edittext_gb"
                        android:inputType="textPassword"
                        android:imeActionLabel="@string/action_login"
                        android:nextFocusForward="@+id/login_password"
                        android:hint="@string/password_qr"
                        android:textColorHint="@color/grey_999999"
                        android:textSize="14sp"
                        android:textColor="@color/comman_title"
                        android:background="@color/white"
                        tools:ignore="InvalidImeActionId" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <TextView
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:id="@+id/tvAffirm"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/selector_btn"
        android:gravity="center"
        android:textColor="@color/white"
        android:enabled="false"
        android:textSize="16sp"
        android:text="确定"/>
</LinearLayout>